一致性hash算法的实现 + pdf加水印